--- a/www/prototypes/reference_nl_set.page
+++ b/www/prototypes/reference_nl_set.page
@@ -6,10 +6,10 @@
 <p>Set - Set an attribute of an element type to a specific value</p>
 
 <p><u>Synopsis</u></p>
-<p><b>Set</b> <i>ATTRIBUTE</i> <b>of</b> <i>identifier</i> <b>to</b> <i>value</i></p>
+<p><b>Set</b> <i>ATTRIBUTE</i> <b>of</b> <i>id</i> <b>to</b> <i>value</i></p>
 
 <p><u>Description:</u></p>
-<p>Use the keyword <b>Set</b> to assign a <i>value</i> to an <i>ATTRIBUTE</i> of an element type, referenced via an <i>identifier</i>. See references of <i>ELEMENT_TYPES</i> for <i>ATTRIBUTE</i>s that can be set.</p>
+<p>Use the keyword <b>Set</b> to assign a <i>value</i> to an <i>ATTRIBUTE</i> of an element type, referenced via its <i>id</i>. See references of <i>ELEMENT_TYPES</i> for available <i>ATTRIBUTE</i>s</p>
 
 <p><u>Example:</u></p>
 <code class="example">Set URL of tutorialVideo to https://www.youtube.com/embed/0siisFJUKh4</code>
