--- a/www/prototypes/reference_nl_timestamp.page
+++ b/www/prototypes/reference_nl_timestamp.page
@@ -6,8 +6,8 @@
 <p>timestamp</p>
 
 <p><u>Synopsis</u></p>
-<p>Attributes can be set with command <b>Set</b></p>
-<p><i>ATTRIBUTE</i>: <b>id</b> <i>value</i>: any_characters_without_spaces
+<p>The element type timestamp has the following attributes:</p>
+<p><i>ATTRIBUTE</i>: <b>id</b> <i>value</i>: any characters without spaces
 <br/><i>ATTRIBUTE</i>: <b>title</b> <i>value</i>: string inside quotes
 <br/><i>ATTRIBUTE</i>: <b>time</b> <i>value</i>: time in seconds</p>
 
