--- a/www/prototypes/reference_nl_textpage.page
+++ b/www/prototypes/reference_nl_textpage.page
@@ -6,8 +6,8 @@
 <p>textpage</p>
 
 <p><u>Synopsis - keywords used:</u></p>
-<p>Attributes can be set with command <b>Set</b></p>
-<p><i>ATTRIBUTE</i>: <b>id</b> <i>value</i>: any_characters_without_spaces
+<p>The element type textpage has the following attributes:</p>
+<p><i>ATTRIBUTE</i>: <b>id</b> <i>value</i>: any characters without spaces
 <br/><i>ATTRIBUTE</i>: <b>title</b> <i>value</i>: string inside quotes
 <br/><i>ATTRIBUTE</i>: <b>body</b> <i>value</i>: string inside quotes</p>
 
