--- a/www/resources/storyboard.css
+++ b/www/resources/storyboard.css
@@ -154,6 +154,17 @@ div.sb-preview {
   overflow-y: auto;
 }
 
+/* larger storyboard preview only on summary page */
+div.sb-preview-summary {
+  width: 30em;
+  border: 1px solid grey;
+  float: left;
+  padding: 5px;
+  margin: 1px;
+  margin-left: 10px;
+  overflow-y: auto;
+}
+
 /* monaco_storyboard form field render_input */
 div.storyboardContainer {
   overflow: hidden;
