--- a/www/resources/experiment.css
+++ b/www/resources/experiment.css
@@ -16,6 +16,10 @@ body{
   margin-top: 0.3em;
 }
 
+.templatebtn {
+  margin-top: 0.3em;
+}
+
 .hidden {
   display: none;
 }
@@ -82,6 +86,19 @@ span.tip {
   border-color: #008198;
   color: white;
 }
+
+.templatebtn.btn-info {
+  background: #3dc259;
+  border-color: #008198;
+  color: white;
+}
+
+.templatebtn.btn-info:hover {
+  background: #3dc259;
+  border-color: #008198;
+  color: white;
+}
+
 
 button[name="__action_start"].btn-default {
   background: #3cafc3;
